Testcases/neg/test02.jl
# global variable (not valid in our version)
a::Integer = 10
function main()
end
main()

